--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="de" class="h-100">
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,36 +11,37 @@
   <link href="./third/bootstrap-4.5.3/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+  <!-- Favicons -->
+  <meta name="theme-color" content="#563d7c">
+  
   <!-- NCR styles-->
   <link href="./ncr/ncr.css" rel="stylesheet">
-
 </head>
 
 <body class="d-flex flex-column h-100">
   <header>
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark navbar-ncr">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <a class="navbar-brand" href="./index.html"><img src="./ncr/ncr-logo.png" height="70"
           class="d-inline-block align-center" alt="" loading="lazy">
+        &nbsp;&nbsp;New City Rollers Naters
       </a>
-      <div class="navabar-text navbar-ncr-text">New City Rollers Naters</div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse navbar-collapse-ncr" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto navbar-nav-ncr">
+      <div class="collapse navbar-collapse navbar-ncr" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link nav-link-ncr" href="./index.html">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link" href="./jahres-programm.html">Jahresprogramm</a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
+            <a class="nav-link" href="./gallery.html">Bildergallery</a>
           </li>
         </ul>
-        <div class="mr-5 linkbar-ncr"><a class="link-ncr" href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
       </div>
     </nav>
   </header>
@@ -49,26 +49,23 @@
   <!-- Begin page content -->
   <main role="main" class="flex-shrink-0">
     <div class="container">
-      <h1 class="mt-5">Willkommen</h1>
-      <p class="lead">
-        auf der Homepage von New City Rollers Naters. Wir sind ein super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf 
-      </p>
+      <!-- content-->
     </div>
   </main>
 
   <footer class="footer mt-auto py-3">
     <div class="container">
-      <!--<span class="text-muted">Place sticky footer content here.</span>-->
+      <span class="text-muted">Place sticky footer content here.</span>
     </div>
   </footer>
-
-  <!-- scripts-->
   <script src="./third/jquery-3.5.1/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-  <script src="./third/bootstrap-4.5.3/bootstrap.bundle.min.js"
+  <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+  <script src="./Sticky Footer Navbar Template · Bootstrap_files/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
