--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           <li class="nav-item active">
             <a class="nav-link nav-link-ncr" href="./index.html">Home<span class="sr-only">(current)</span></a>
           </li>
-          <!--<li class="nav-item">
-            <a class="nav-link" href="./jahres-programm.html">Jahresprogramm</a>
-          </li> -->
           <li class="nav-item">
-            <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
+            <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte</a>
           </li>
+          <!--li class="nav-item">
+            <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
+          </li-->
         </ul>
         <div class="mr-5 linkbar-ncr"><a class="link-ncr" href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
       </div>
@@ -51,7 +51,7 @@
     <div class="container">
       <h1 class="mt-5">Willkommen</h1>
       <p class="lead">
-        auf der Homepage von New City Rollers Naters. Wir sind ein super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf super  fsadf sadf asdf sadf asf ays fsadf asdf 
+        auf der Homepage von <strong>New City Rollers Naters</strong>. 
       </p>
     </div>
   </main>
