remove role main

--- a/history.html
+++ b/history.html
@@ -49,7 +49,7 @@
   </header>
 
   <!-- Begin page content -->
-  <main role="main" class="flex-shrink-0">
+  <main class="flex-shrink-0">
     <div class="container">
       <h1 class="mt-5">Gründungsgeschichte New City Rollers Naters</h1>
       <p>
