--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </header>
 
   <!-- Begin page content -->
-  <main role="main" class="flex-shrink-0">
+  <main class="flex-shrink-0">
     <div class="container">
       <h1 class="mt-5">Willkommen</h1>
       <p class="lead">
