--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
   </header>
 
   <!-- Begin page content -->
-  <main role="main" class="flex-shrink-0">
+  <main class="flex-shrink-0">
     <div class="container">
       
     </div>
