--- a/history.html
+++ b/history.html
@@ -34,6 +34,9 @@
           <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./index.html">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-ncr" href="./jahresprogramm.html">Jahresprogramm</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte<span
                 class="sr-only">(current)</span></a>
@@ -51,45 +54,61 @@
   <!-- Begin page content -->
   <main class="flex-shrink-0">
     <div class="container">
-      <h1 class="mt-5">Gründungsgeschichte New City Rollers Naters</h1>
-      <p>
-        Am 31. August 2001 abends um 20:13 Uhr trafen sich zufälligerweise Walter, Lothar und Roland im Restaurant
-        Belalp in Naters. Nach zwei bis drei Runden Bier und Wein kam man auf die Idee, einen
-        Töffklub zu gründen.
-        </br></br>
-        Da Walter den ganzen Sommer in Binn arbeitete und in seiner Freizeit mit dem Roller von
-        City zu City (Binn, Ausserbinn, Ernen, Lax, Deisch, Betten Talstation, Mörel usw.) unterwegs war, stand dem Name
-        <strong>New City Rollers Naters</strong> nichts im Wege.
-        </br></br>
-        Um 21:00 Uhr ergriff Roland geistesgegenwärtig die Initiative und verlangte von der Wirtin Hildegard ein leeres
-        Menüblatt und einen Kugelschreiber und begann die wichtigsten Punkte aufzuschreiben. Dieses Dokument exisistiert
-        noch in der Originalfassung und ist im Besitz des Präsidenten. Um dem Besucher unserer Website jedoch das
-        mühsame Entziffern dieser festgehaltenen Punkte zu ersparen, haben wir sie hier in leserlicher Form
-        zusammengefasst:
-      </br>
-        <dl class="row">
-        <dt class="col-sm-3">Initianten</dt>
-        <dd class="col-sm-7">Walter, Lothar, Roland</dd>
+      <h1 class="mt-5">Gründungsgeschichte<small class="text-muted"> New City Rollers Naters</small></h1>
+      <div style="max-width: 1000px;">
+        <p>
+          Am 31. August 2001 abends um 20:13 Uhr trafen sich zufälligerweise Walter, Lothar und Roland im Restaurant
+          Belalp in Naters. Nach zwei bis drei Runden Bier und Wein kam man auf die Idee, einen
+          Töffklub zu gründen.
+          </br></br>
+          Da Walter den ganzen Sommer in Binn arbeitete und in seiner Freizeit mit dem Roller von
+          City zu City (Binn, Ausserbinn, Ernen, Lax, Deisch, Betten Talstation, Mörel usw.) unterwegs war, stand dem
+          Name
+          <strong>New City Rollers Naters</strong> nichts im Wege.
+          </br></br>
+          Um 21:00 Uhr ergriff Roland geistesgegenwärtig die Initiative und verlangte von der Wirtin Hildegard ein
+          leeres
+          Menüblatt und einen Kugelschreiber und begann die wichtigsten Punkte aufzuschreiben. Dieses Dokument
+          exisistiert
+          noch in der Originalfassung und ist im Besitz des Präsidenten. Um dem Besucher unserer Website jedoch das
+          mühsame Entziffern dieser festgehaltenen Punkte zu ersparen, haben wir sie hier in leserlicher Form
+          zusammengefasst:
+        </p>
+        <div class="ml-sm-4 ml-md-5 mt-4">
+          <dl class="row">
+            <dt class="col-sm-3 col-md-2">Initianten</dt>
+            <dd class="col-sm-9 col-md-10">Walter, Lothar, Roland</dd>
 
-        <dt class="col-sm-3">Zweck</dt>
-        <dd class="col-sm-7">Pflege der Kameradschaft, Förderung gemeinsamer Interessen, Hilfeleistung in Sachen Technik</dd>
+            <dt class="col-sm-3 col-md-2">Zweck</dt>
+            <dd class="col-sm-9 col-md-10">Pflege der Kameradschaft, Förderung gemeinsamer Interessen, Hilfeleistung in
+              Sachen Technik
+            </dd>
 
-        <dt class="col-sm-3">Vorstand</dt>
-        <dd class="col-sm-7">Der Vorstand setzt sich aus fünf Mitgliedern zusammen.</dd>
+            <dt class="col-sm-3 col-md-2">Vorstand</dt>
+            <dd class="col-sm-9 col-md-10">Der Vorstand setzt sich aus fünf Mitgliedern zusammen.</dd>
 
-        <dt class="col-sm-3">Mitglieder</dt>
-        <dd class="col-sm-7">Mitglied kann jederman werden. Willi betrat um 21:26 Uhr das Rest. Belalp und wurde sofort als 1. Mitglied aufgenommen.</dd>
+            <dt class="col-sm-3 col-md-2">Mitglieder</dt>
+            <dd class="col-sm-9 col-md-10">Mitglied kann jederman werden. Willi betrat um 21:26 Uhr das Rest. Belalp und
+              wurde sofort
+              als 1. Mitglied aufgenommen.</dd>
 
-        <dt class="col-sm-3">Vereinsfarbe</dt>
-        <dd class="col-sm-7">Blau (nicht politisch gemeint, sondern wegen den vorhandenen Tischtücher)</dd>
-        
-        <dt class="col-sm-3">Stammlokale</dt>
-        <dd class="col-sm-7">Pöstli, Naters, Ornavasso, Luxor, Walliser Kanne, Bistro Naters, Pub 118, Grimsel Blick, Aletschhorn Belalp, Furka Mörel, Touring, Lötschberg, Sparrhorn Belalp, Simplon Naters, Restaurant Bar Roma</dd>
-        
-        <dt class="col-sm-3 text-truncate">Gründungsverammlung</dt>
-        <dd class="col-sm-7">Diese fand am 10. November 2001 mit acht Mitgliedern im Rest. Belalp in Naters statt.</dd>
-      </dl>
-      </p>
+            <dt class="col-sm-3 col-md-2">Vereinsfarbe</dt>
+            <dd class="col-sm-9 col-md-10">Blau (nicht politisch gemeint, sondern wegen den vorhandenen Tischtücher)
+            </dd>
+
+            <dt class="col-sm-3 col-md-2">Stammlokale</dt>
+            <dd class="col-sm-9 col-md-10">Pöstli, Naters, Ornavasso, Luxor, Walliser Kanne, Bistro Naters, Pub 118,
+              Grimsel Blick,
+              Aletschhorn Belalp, Furka Mörel, Touring, Lötschberg, Sparrhorn Belalp, Simplon Naters, Restaurant Bar
+              Roma
+            </dd>
+
+            <dt class="col-sm-3 col-md-2"><div class="d-none d-sm-block">Gründungs- verammlung</div><div class="d-block d-sm-none">Gründungsverammlung</div></dt>
+            <dd class="col-sm-9 col-md-10">Diese fand am 10. November 2001 mit acht Mitgliedern im Rest. Belalp in
+              Naters statt.</dd>
+          </dl>
+        </div>
+      </div>
     </div>
   </main>
 
