--- a/jahresprogramm.html
+++ b/jahresprogramm.html
@@ -31,11 +31,12 @@
       </button>
       <div class="collapse navbar-collapse navbar-collapse-ncr" id="navbarCollapse">
         <ul class="navbar-nav mr-auto navbar-nav-ncr">
-          <li class="nav-item active">
-            <a class="nav-link nav-link-ncr" href="./index.html">Home<span class="sr-only">(current)</span></a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link nav-link-ncr" href="./jahresprogramm.html">Jahresprogramm</a>
+            <a class="nav-link nav-link-ncr" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link nav-link-ncr" href="./jahresprogramm.html">Jahresprogramm<span
+              class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte</a>
@@ -44,7 +45,8 @@
             <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
           </li-->
         </ul>
-        <div class="mr-5 linkbar-ncr"><a class="link-ncr" href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
+        <div class="mr-5 linkbar-ncr"><a class="link-ncr"
+            href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
       </div>
     </nav>
   </header>
@@ -52,11 +54,31 @@
   <!-- Begin page content -->
   <main class="flex-shrink-0">
     <div class="container">
-      <h1 class="mt-5">Willkommen<small class="text-muted"> auf unserer Homepage</small></h1>
-      <div class="ml-sm-3 ml-md-5 mt-5">
-      <h1>Unser Motto für 2021:<small class="text-muted"> Ich bin für Tempo 100, aber in unter 4
-        Sekunden!</small></h1>  
-    </div>
+      <h1 class="mt-5">Jahresprogramm 2021</h1>
+      <div style="max-width: 800px; font-size: 1.5rem;">
+      <div class="ml-sm-3 ml-md-5 mt-4">
+      <dl class="row">
+        <dt class="col-sm-4 col-md-3">01.05.2021</dt>
+        <dd class="col-sm-8 col-md-9"><a href="https://www.goudron.ch/" target="_blank">Goudron Days Brig</a></dd>
+
+        <dt class="col-sm-4 col-md-3">02.05.2021</dt>
+        <dd class="col-sm-8 col-md-9">Töff-Segnung Simplon</dd>
+
+        <dt class="col-sm-4 col-md-3">06.05.2021</dt>
+        <dd class="col-sm-8 col-md-9">Töff-Segnung Raron</dd>
+
+        <dt class="col-sm-4 col-md-3">07.08.2021</dt>
+        <dd class="col-sm-8 col-md-9">Jahresausritt, Family-Day</dd>
+
+        <dt class="col-sm-4 col-md-3">11.09.2021</dt>
+        <dd class="col-sm-8 col-md-9"><a href="https://www.bock-uf-mofa.ch/" target="_blank">Bock uf Mofa</a> Ausfahrt (Helfer gesucht)</dd>
+
+        <dt class="col-sm-4 col-md-3">12.11.2021</dt>
+        <dd class="col-sm-8 col-md-9">GV NCR-Naters</dd>
+      </dl>
+      <p>* Änderungen aufgrund Covid-19 vorbehalten</p>
+      <p><a href="ncr/Jahresporgramm2021.pdf" target="_blank">Download als pdf</a></p>
+    </div></div>
     </div>
   </main>
 
