jahresprog at home, add gallery

--- a/history.html
+++ b/history.html
@@ -34,16 +34,16 @@
           <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./jahresprogramm.html">Jahresprogramm</a>
-          </li>
+          </li-->
           <li class="nav-item active">
             <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte<span
                 class="sr-only">(current)</span></a>
           </li>
-          <!--li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
-          </li-->
+          </li>
         </ul>
         <div class="mr-5 linkbar-ncr"><a class="link-ncr"
             href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
@@ -54,8 +54,8 @@
   <!-- Begin page content -->
   <main class="flex-shrink-0">
     <div class="container">
-      <h1 class="mt-5">Gründungsgeschichte<small class="text-muted"> New City Rollers Naters</small></h1>
-      <div style="max-width: 1000px;">
+      <h1 class="mt-4 mb-3">Gründungsgeschichte<small class="text-muted"> New City Rollers Naters</small></h1>
+      <div style="max-width: 1000px;" class="ml-3">
         <p>
           Am 31. August 2001 abends um 20:13 Uhr trafen sich zufälligerweise Walter, Lothar und Roland im Restaurant
           Belalp in Naters. Nach zwei bis drei Runden Bier und Wein kam man auf die Idee, einen
