--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
           <li class="nav-item active">
             <a class="nav-link nav-link-ncr" href="./index.html">Home<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <!--li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./jahresprogramm.html">Jahresprogramm</a>
-          </li>
+          </li-->
           <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte</a>
           </li>
-          <!--li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
-          </li-->
+          </li>
         </ul>
-        <div class="mr-5 linkbar-ncr"><a class="link-ncr" href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
+        <div class="mr-5 linkbar-ncr"><a class="link-ncr"
+            href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
       </div>
     </nav>
   </header>
@@ -52,11 +53,37 @@
   <!-- Begin page content -->
   <main class="flex-shrink-0">
     <div class="container">
-      <h1 class="mt-5">Willkommen<small class="text-muted"> auf unserer Homepage</small></h1>
-      <div class="ml-sm-3 ml-md-5 mt-5">
-      <h1>Unser Motto für 2021:<small class="text-muted"> Ich bin für Tempo 100, aber in unter 4
-        Sekunden!</small></h1>  
-    </div>
+      <h1 class="mt-4 mb-3">Willkommen<small class="text-muted"> auf unserer Homepage</small></h1>
+      <h1 class="mt-4 mb-3">Jahresprogramm 2021</h1>
+      <div style="max-width: 800px; font-size: 1.25rem;">
+        <div class="ml-sm-3 ml-md-5">
+          <dl class="row">
+            <dt class="col-sm-4 col-md-3">01.05.2021</dt>
+            <dd class="col-sm-8 col-md-9"><a href="https://www.goudron.ch/" target="_blank">Goudron Days Brig</a></dd>
+
+            <dt class="col-sm-4 col-md-3">02.05.2021</dt>
+            <dd class="col-sm-8 col-md-9">Töff-Segnung Simplon</dd>
+
+            <dt class="col-sm-4 col-md-3">13.05.2021</dt>
+            <dd class="col-sm-8 col-md-9">Töff-Segnung Raron</dd>
+
+            <dt class="col-sm-4 col-md-3">07.08.2021</dt>
+            <dd class="col-sm-8 col-md-9">Jahresausritt, Family-Day</dd>
+
+            <dt class="col-sm-4 col-md-3">11.09.2021</dt>
+            <dd class="col-sm-8 col-md-9"><a href="https://www.bock-uf-mofa.ch/" target="_blank">Bock uf Mofa</a>
+              Ausfahrt (Helfer gesucht)</dd>
+
+            <dt class="col-sm-4 col-md-3">12.11.2021</dt>
+            <dd class="col-sm-8 col-md-9">GV NCR-Naters</dd>
+          </dl>
+          <p>* Änderungen aufgrund Covid-19 vorbehalten</p>
+        </div>
+      </div>
+      <div class="mt-4">
+        <h1>Motto für 2021:<small class="text-muted"> Ich bin für Tempo 100, aber in unter 4
+            Sekunden!</small></h1>
+      </div>
     </div>
   </main>
 
