--- a/jahresprogramm.html
+++ b/jahresprogramm.html
@@ -36,7 +36,7 @@
           </li>
           <li class="nav-item active">
             <a class="nav-link nav-link-ncr" href="./jahresprogramm.html">Jahresprogramm<span
-              class="sr-only">(current)</span></a>
+                class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte</a>
@@ -54,31 +54,33 @@
   <!-- Begin page content -->
   <main class="flex-shrink-0">
     <div class="container">
-      <h1 class="mt-5">Jahresprogramm 2021</h1>
+      <h1 class="mt-4 mb-3">Jahresprogramm 2021</h1>
       <div style="max-width: 800px; font-size: 1.25rem;">
-      <div class="ml-sm-3 ml-md-5 mt-4">
-      <dl class="row">
-        <dt class="col-sm-4 col-md-3">01.05.2021</dt>
-        <dd class="col-sm-8 col-md-9"><a href="https://www.goudron.ch/" target="_blank">Goudron Days Brig</a></dd>
+        <div class="ml-sm-3 ml-md-5 mt-4">
+          <dl class="row">
+            <dt class="col-sm-4 col-md-3">01.05.2021</dt>
+            <dd class="col-sm-8 col-md-9"><a href="https://www.goudron.ch/" target="_blank">Goudron Days Brig</a></dd>
 
-        <dt class="col-sm-4 col-md-3">02.05.2021</dt>
-        <dd class="col-sm-8 col-md-9">Töff-Segnung Simplon</dd>
+            <dt class="col-sm-4 col-md-3">02.05.2021</dt>
+            <dd class="col-sm-8 col-md-9">Töff-Segnung Simplon</dd>
 
-        <dt class="col-sm-4 col-md-3">06.05.2021</dt>
-        <dd class="col-sm-8 col-md-9">Töff-Segnung Raron</dd>
+            <dt class="col-sm-4 col-md-3">06.05.2021</dt>
+            <dd class="col-sm-8 col-md-9">Töff-Segnung Raron</dd>
 
-        <dt class="col-sm-4 col-md-3">07.08.2021</dt>
-        <dd class="col-sm-8 col-md-9">Jahresausritt, Family-Day</dd>
+            <dt class="col-sm-4 col-md-3">07.08.2021</dt>
+            <dd class="col-sm-8 col-md-9">Jahresausritt, Family-Day</dd>
 
-        <dt class="col-sm-4 col-md-3">11.09.2021</dt>
-        <dd class="col-sm-8 col-md-9"><a href="https://www.bock-uf-mofa.ch/" target="_blank">Bock uf Mofa</a> Ausfahrt (Helfer gesucht)</dd>
+            <dt class="col-sm-4 col-md-3">11.09.2021</dt>
+            <dd class="col-sm-8 col-md-9"><a href="https://www.bock-uf-mofa.ch/" target="_blank">Bock uf Mofa</a>
+              Ausfahrt (Helfer gesucht)</dd>
 
-        <dt class="col-sm-4 col-md-3">12.11.2021</dt>
-        <dd class="col-sm-8 col-md-9">GV NCR-Naters</dd>
-      </dl>
-      <p>* Änderungen aufgrund Covid-19 vorbehalten</p>
-      <p><a href="ncr/Jahresporgramm2021.pdf" target="_blank">Download als pdf</a></p>
-    </div></div>
+            <dt class="col-sm-4 col-md-3">12.11.2021</dt>
+            <dd class="col-sm-8 col-md-9">GV NCR-Naters</dd>
+          </dl>
+          <p>* Änderungen aufgrund Covid-19 vorbehalten</p>
+          <p><a href="ncr/Jahresporgramm2021.pdf" target="_blank">Download als pdf</a></p>
+        </div>
+      </div>
     </div>
   </main>
 
