--- a/history.html
+++ b/history.html
@@ -41,9 +41,9 @@
             <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte<span
                 class="sr-only">(current)</span></a>
           </li>
-          <!--li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
-          </li-->
+          </li>
         </ul>
         <div class="mr-5 linkbar-ncr"><a class="link-ncr"
             href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
