--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./history.html">Vereinsgeschichte</a>
           </li>
-          <!--li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link nav-link-ncr" href="./gallery.html">Bildergallery</a>
-          </li-->
+          </li>
         </ul>
         <div class="mr-5 linkbar-ncr"><a class="link-ncr"
             href="https://www.facebook.com/New-City-Rollers-Naters-1616589825256170" target="_blank">facebook</a></div>
