gallery share false

--- a/gallery.html
+++ b/gallery.html
@@ -87,13 +87,14 @@
     crossorigin="anonymous"></script>
     <script>
       $(document).ready(function() {
-        $("#lightgallery-2007-1").lightGallery();
-        $("#lightgallery-2007-2").lightGallery();
-        $("#lightgallery-2007-3").lightGallery();
-        $("#lightgallery-2007-4").lightGallery();
-        $("#lightgallery-2006-1").lightGallery();
-        $("#lightgallery-2006-2").lightGallery();
-        $("#lightgallery-2005-1").lightGallery();
+        var options = {share: false};
+        $("#lightgallery-2007-1").lightGallery(options);
+        $("#lightgallery-2007-2").lightGallery(options);
+        $("#lightgallery-2007-3").lightGallery(options);
+        $("#lightgallery-2007-4").lightGallery(options);
+        $("#lightgallery-2006-1").lightGallery(options);
+        $("#lightgallery-2006-2").lightGallery(options);
+        $("#lightgallery-2005-1").lightGallery(options);
       });
   </script>
 </body>
