--- a/gallery.html
+++ b/gallery.html
@@ -93,7 +93,7 @@
   <script>
     $(document).ready(function () {
       var options = { 
-        dynamic: true,
+        dynamic: true, // test
         share: false,
         rotate: false
       };
